--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.5"
-  },
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "next": "15.1.5",
+    "three": "^0.172.0",
+    "@react-three/drei": "^9.121.2",
+    "@react-three/fiber": "^8.17.12",
+    "@types/three": "^0.172.0",
+    "dat.gui": "^0.7.9"
+  },  
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
