--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "15.1.5",
-    "three": "^0.172.0",
-    "@react-three/drei": "^9.121.2",
-    "@react-three/fiber": "^8.17.12",
-    "@types/three": "^0.172.0",
-    "dat.gui": "^0.7.9"
-  },  
+    "@react-three/drei": "^9.65.5",
+    "@react-three/fiber": "^8.14.3",
+    "@types/three": "^0.152.0",
+    "dat.gui": "^0.7.9",
+    "next": "13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "three": "^0.172.0"
+  },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.6"
   }
 }
