--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/three": "^0.172.0",
+    "framer-motion": "^12.0.3",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
