--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/three": "^0.172.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.3",
     "next": "15.1.5",
     "react": "^19.0.0",
