add popup video and breadcrumb component

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -21,7 +21,7 @@
       "type": "Projet scolaire",
       "technologies": ["JavaScript", "Three.js", "Express", "Firebase"],
       "imgLink": "siege-ergonomique.png",
-      "videoLink": "yatzee.mp4",
+      "videoLink": "",
       "externalLink": "https://yatzee.fr"
     },
     {
