--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@next/third-parties": "^15.1.7",
     "@prisma/client": "^6.4.1",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@types/three": "^0.172.0",
